# abstract-data-types

./: ArraySequence.h  ArraySequenceBase.h  CMakeLists.txt  DynamicArray.h  Exceptions.h  ICollection.h  ImmutableArraySequence.h  LinkedList.h  ListSequence.h  ListSequenceBase.h  MutableListSequence.h  README.md  Sequence.h  SequenceEnumerator.h  Tests.cpp  Tests.h  main.cpp
